--- a/feature/home/compose/src/main/res/values/colors.xml
+++ b/feature/home/compose/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="other">#607d8b</color>
     <!-- Fork label background -->
     <color name="forkBackground">#666</color>
+    <color name="ad_background">#ccc</color>
 </resources>
