--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <androidx.compose.ui.platform.ComposeView
-        android:id="@+id/coomposeView"
+        android:id="@+id/composeView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
